# silkworm

./: .gitmodules  CMakeLists.txt  conanfile.py  riscv32im.cmake  riscv64im.cmake
cmake/: conan.cmake
cmake/common/: targets.cmake
cmake/profiles/: riscv32-baremetal  riscv32im.conan.profile  riscv64im.conan.profile
silkworm/: CMakeLists.txt  print.hpp
silkworm/core/: CMakeLists.txt
silkworm/core/chain/: config.cpp  config.hpp  genesis.cpp  genesis.hpp
silkworm/core/common/: assert.cpp  assert.hpp  base.hpp  endian.cpp  lru_cache.hpp  small_map.hpp  test_util.hpp  util.cpp  util.hpp
silkworm/core/crypto/: ecdsa.c  ecdsa.cpp  ecdsa.h
silkworm/core/execution/: call_tracer.cpp  call_tracer.hpp  evm.cpp  evm.hpp  execution.hpp  precompile.cpp  precompile.hpp  processor.cpp  processor.hpp
silkworm/core/protocol/: blockchain.cpp  bor_rule_set.cpp  ethash_rule_set.cpp  ethash_rule_set.hpp  merge_rule_set.cpp  param.hpp  rule_set.cpp  validation.cpp  validation.hpp
silkworm/core/protocol/bor/: config.cpp
silkworm/core/state/: in_memory_state.cpp  in_memory_state.hpp  state.hpp
silkworm/core/test_util/: sample_blocks.hpp
silkworm/core/trie/: hash_builder.cpp  node.cpp
silkworm/core/trie_zz/: flat_store.cpp  flat_store.hpp  fold_unfold.cpp  grid_mpt.cpp  helpers.hpp  mpt.hpp  node_store_i.hpp  rlp.hpp  rlp_sw.hpp  unused.hpp
silkworm/core/trie_zz/test/: CMakeLists.txt  grid_mpt_test.cpp  simple_test.hpp  tests_unverified.cpp
silkworm/core/types/: account.hpp  address.cpp  block.cpp  block.hpp  bloom.cpp  eip_7685_requests.cpp  eip_7685_requests.hpp  transaction.cpp  transaction.hpp
silkworm/dev/: CMakeLists.txt  expected_state.cpp  expected_state.hpp  state_transition.cpp  state_transition.hpp
silkworm/dev/cli/: CMakeLists.txt  runner.cpp
silkworm/dev/common/: ecc_key_pair.cpp  ecc_key_pair.hpp  ecc_public_key.cpp  ecc_public_key.hpp  secp256k1_context.cpp  secp256k1_context.hpp
silkworm/dev/common/crypto/: ecdsa_signature.cpp  xor.cpp
